<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_title_id"
            android:layout_centerHorizontal="true"
            android:text="@string/next_up_what_s_your_name"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_TV_id"
            android:layout_below="@+id/name_title_id"
            android:layout_marginTop="60dp"
            android:text="@string/this_is_how_you_ll_appear_on_hugme"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_ET_id"
            android:layout_below="@+id/name_TV_id"
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="-3dp"
            android:paddingStart="3dp"
            />

        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:corner_radius="8dp"
            android:background="@color/purple"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/continue_btn_id"
                android:background="@android:color/transparent"
                android:text="@string/continue_txt"
                android:textColor="@color/white"
                />

        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>


    </RelativeLayout>

</RelativeLayout>